# Custom-Nexisgen

./: .dockerignore  .env.example  .gitignore  URLs.ods  checker.py  checker.ui  config.json  download_model.py  pyproject.toml  sources.txt  statistics.ui
docker/: Dockerfile.validation-api  Dockerfile.validator  README.md  compose.env.example  docker-compose.trainer.yml  docker-compose.validation-api.yml  docker-compose.validator.yml  healthcheck_validator.py  trainer.env.example  validation-api.env.example  validator.env.example
docker/sql/: 001_validation_evidence.sql
docs/: policy-compliance.md
miner/: pipeline.py  youtube.py
nexis/: __init__.py  checker.py  cli.py  config.py  models.py  protocol.py  scoring.py
nexis/api/: app.py  repository.py  schemas.py
nexis/chain/: credentials.py  weights.py
nexis/miner/: captioner.py  pipeline.py  providers.py  youtube.py  youtube_1.py
nexis/specs/: base.py  video_v1.py
nexis/storage/: __init__.py  eval_data.py  r2.py  shared_bucket.py
nexis/validator/: dataset_check.py  dataset_convert.py  docker_runner.py  pipeline.py  reporting.py  training.py  vbench_scorer.py
tests/: test_caption_validation.py  test_captioner_rate_limit.py  test_chain_credentials.py  test_dataset_check.py  test_local_sources.py  test_protocol_models.py  test_scoring.py  test_storage.py  test_total_score_payload.py  test_training_phases.py  test_vbench_parse.py
