[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexisgen"
version = "1.0.1"
description = "Nexisgen subnet miner/validator implementation."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "python-dotenv>=1.0.1",
  "pyarrow>=14.0.0",
  "aiobotocore>=2.13.0",
  "bittensor==9.12.2",
  # bittensor 9.12.2 transitively brings in async-substrate-interface; 2.x has
  # a broken __init__ that crashes if `scalecodec` is installed (which it must
  # be — async-substrate-interface 2.x itself imports from `scalecodec`).
  # 1.6.4 is the last release without that check.
  "async-substrate-interface==1.6.4",
  "openai>=1.40.0",
  "yt-dlp",
  # Decrypt Chrome/Chromium cookies on Linux for --cookies-from-browser.
  "secretstorage>=3.3; sys_platform == 'linux'",
  "fastapi",
  "uvicorn",
  "asyncpg",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
nexis = "nexis.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["nexis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

